Added jdbc_aop for task #5